--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ input[type=text] {
     }
 }
 
-body[data-mobile=true][data-landscape=true] #navbar {
+body[data-mobile=true][data-landscape=true][data-ios=false] #navbar {
     display: none;
 }
 body[data-mobile=true] #navbar {
